[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "kiota-abstractions"
authors = [{name = "Microsoft", email = "graphtooling+python@microsoft.com"}]
license = {file = "LICENSE"}
readme = "README.md"
classifiers = ["License :: OSI Approved :: MIT License"]
dynamic = ["version", "description"]

[project.urls]
Home = "https://github.com/microsoft/kiota#readme"

[tool.flit.module]
name = "kiota"
